--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ JB :
     gauges :
         site_id : 'SITE ID'
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-78603503-1'
     getclicky :
       site_id : 
     mixpanel :
@@ -120,7 +120,7 @@ JB :
   # Set 'provider' to false to turn sharing off globally.
   #
   sharing :
-    provider : false
+    provider : tweet
     
   # Settings for all other include helpers can be defined by creating 
   # a hash with key named for the given helper. ex:
