--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author :
   name : Yuuki Takano
   github : ytakano
   twitter : ytakanoster
+  email: ytakanoster@gmail.com
   feedburner : 
 
 # The production_url is only used when full-domain names are needed
