--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ highlighter: rouge
 # so be sure to set them if your theme uses them.
 #
 title : TOP
-tagline: Beautiful Research
+tagline: The Beautiful Research
 author :
   name : Yuuki Takano
   github : ytakano
